test/testdata/classes/not_indexable_error.lox
class Foo {}
Foo[0]; // error: 'class' value is not indexable
